# vllm-rbln

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .pymarkdown  CONTRIBUTING.md  Dockerfile.ubi.ci  README.md  REPRODUCE_STATIC_CACHE.md  actionlint.yaml  conftest.py  entrypoint.sh  pyproject.toml  requirements.txt  setup.py  test_llama.py
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml
.github/workflows/: dispatch_pkg_update.yaml  pkg_create_pr.yaml  pkg_update.yaml  pr_title_check.yaml  pre-commit.yml  rbln_arc_ci.yaml  rbln_deploy.yaml  rbln_deploy_on_tag.yaml  rbln_dispatch_trigger_on_pr_ci.yaml  rbln_optimum_ci.yaml  rbln_rh_ci.yaml  rbln_trigger_fsw_pr_ci.yaml  rbln_trigger_internal_ci.yaml  rbln_trigger_internal_test.yaml  rbln_trigger_on_pr.yaml  rbln_utils_get_compiler_version_ci.yaml  rbln_utils_get_optimum_version_ci.yaml  rbln_utils_set_compiler_version_ci.yaml  rbln_vllm-rbln_pytest.yaml
assets/: Dockerfile.ubi.ci
benchmarks/: README.md  backend_request_func.py  benchmark_dataset.py  benchmark_logprobs.py  benchmark_serving.py  benchmark_serving_structured_output.py  benchmark_throughput.py  benchmark_utils.py  compile_optimum_rbln.py  run_benchmark_throughput.example.sh
docs/: bucketing.md
examples/: data_parallel.py  model_test.py  model_test_compare.py  test.py
examples/experimental/: README.md  chunked_prefill_test.py  data_parallel.py  deepseek_test.py  eager_basic.py  model_test.py  offline_inference_basic.py  offline_inference_profile.py  qwen3_data_parallel.py  qwen3_embedding.py  qwen3_flash_test.py  qwen3_reranker.py  qwen3_test.py  run.py  run_lora_test.py  run_specdec_eagle3_test.py  run_specdec_eagle_test.py  run_specdec_medusa_test.py  run_specdec_ngram_test.py  run_specdec_suffix_test.py  simple_offline_bench.py  tensor_parallel.py
examples/optimum/: commands.sh  compile_llama_3b.py  print_data_ptr.py  run_basic.py  run_blip2.py  run_decoder_only.py  run_decoder_only_simple.py  run_encoder_decoder.py  run_encoder_only.py  run_gemma3.py  run_idefics3.py  run_llama_test.py  run_llava.py  run_lora.py  run_paligemma.py  run_pixtral.py  run_prefix_caching.py  run_prefix_caching_long.py  run_qwen2_5_vl.py  run_qwen3.py  run_qwen3_embedding.py  run_qwen3_reranker.py  run_qwen_vl.py  run_t5_conditional.py  run_whisper.py  simple_test_prefix_caching.py  simple_test_prefix_caching2.py
scripts/performance/: measure_latency_advanced.py
scripts/validation/: compare_logprobs.py  compare_logprobs_advanced.py
tests/: mock.py  test_model_coverage_single.py
tests/entrypoints/openai/: test_basic.py  test_chat.py  utils.py
tests/lora/: test_lora.py
tests/torch.compile/models/: test_basic_models_correctness.py
tests/torch_compile/: conftest.py
tests/torch_compile/common/: test_forward_context.py  test_logger.py  test_platform.py  test_rbln_envs.py
tests/torch_compile/lora/: conftest.py  test_layers.py  test_lora_allowed_token_ids.py  test_lora_checkpoints.py  test_lora_functions.py  test_lora_huggingface.py  test_lora_inputs.py  test_lora_manager.py  test_lora_mask.py  test_peft_helper.py  test_resolver.py  test_tokenizer_group.py  test_worker.py  utils.py
tests/torch_compile/models/: test_basic_models_correctness.py  test_model_coverage_single.py  test_pooling_model_embed.py  test_pooling_model_score.py  utils.py
tests/torch_compile/units/: test_forward_context.py  test_logger.py  test_platform.py  test_platform_plugins.py  test_rbln_envs.py
tests/torch_compile/worker/: test_metrics.py  test_model_runner.py  test_utils.py  test_worker.py
tests/v1/core/: __init__.py  test_async_scheduler.py  test_prefix_caching.py  test_scheduler.py  test_structured_output.py  utils.py
tests/v1/lora/: test_layers.py
tests/v1/worker/: conftest.py  test_prefix_caching.py  test_rebel_model_runner.py  test_rebel_optimum_model_runner.py  test_sampler.py  utils.py
tools/: mypy.sh  shellcheck.sh
tools/pre_commit/: check_init_lazy_imports.py  check_license_header.py  mypy.py  shellcheck.sh
vllm_rbln/: __init__.py  _version.py  forward_context.py  logger.py  platform.py  rbln_communicator.py  rbln_envs.py
vllm_rbln/attention/: layer.py
vllm_rbln/attention/backends/: flash_attention.py  flash_attention_triton.py
vllm_rbln/core/: block_pool_v1.py  debug_scheduler.py  kv_cache_coordinator_v1.py  optimum_block_manager.py  optimum_kv_cache_manager.py  optimum_scheduler.py  optimum_scheduler_v1.py  scheduler.py
vllm_rbln/core/block/: optimum_block_table.py
vllm_rbln/distributed/: rbln_communicator.py
vllm_rbln/lora/: inputs.py  layer.py  layers.py  mask.py
vllm_rbln/lora/punica_wrapper/: punica_rbln.py
vllm_rbln/model_executor/layers/: logits_processor.py  rotary_embedding.py  vocab_parallel_embedding.py
vllm_rbln/model_executor/model_loader/: rbln_model_loader.py  weight_loader.py
vllm_rbln/models/: deepseek_v2.py  gemma3_mm.py  gpt_oss.py  minimax_m2.py  qwen2.py  qwen2_moe.py  qwen3.py  qwen3_moe.py  utils.py
vllm_rbln/prefix_cache_manager/: optimum_eviction_policy.py  optimum_prefix_cache_manager.py
vllm_rbln/triton_kernels/: attention.py  causal_attention.py  flash_attention.py  flash_causal_attention.py  sliding_window_attention.py
vllm_rbln/utils/: __init__.py
vllm_rbln/utils/optimum/: __init__.py  configuration.py  registry.py
vllm_rbln/v1/: __init__.py  kv_cache.py  kv_cache_interface.py
vllm_rbln/v1/attention/: layer.py
vllm_rbln/v1/core/: block_pool.py  kv_cache_coordinator.py  kv_cache_manager.py  kv_cache_utils.py  optimum_block_pool.py  optimum_kv_cache_coordinator.py  optimum_kv_cache_manager.py  optimum_scheduler.py  prefix_kv_cache_manager.py  rbln_async_scheduler.py  rbln_scheduler.py  request_queue.py  single_type_kv_cache_manager.py
vllm_rbln/v1/sample/: __init__.py  new_sampler.py  rbln_rejection_sampler.py  rbln_sampler.py  sampler.py  sort_free_sampler.py  sort_free_top_p_sampler.py
vllm_rbln/worker/: __init__.py  metrics.py  model_runner.py  optimum_input_batch.py  optimum_model_runner.py  optimum_model_runner_v1.py  optimum_worker.py  optimum_worker_v1.py  utils.py  worker.py
(+132 files in other folders)
